--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"王赞",
     "subTitle":"个人学习笔记",
-    "avatarUrl":"https://www.notion.so/image/attachment%3A0dfd0b3b-8ea4-464c-8a87-4bc7b31def14%3Aa65c33dc772bbd71afad01609023c42.jpg",
+    "avatarUrl":"https://github.com/JiazanWang/Gmeek/blob/main/static/avatar.svg",
     "GMEEK_VERSION":"last",
     "homeUrl":"http://wangjiazan.com",
     "email":"1710998763@qq.com",
