--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "title":"王赞",
     "subTitle":"个人学习笔记",
-    "avatarUrl":"https://github.com/JiazanWang/Gmeek/blob/main/static/mark-github.svg",
+    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
-    "faviconUrl":"https://github.com/JiazanWang/Gmeek/blob/main/static/mark-github.svg",
+    "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "homeUrl":"http://code.wangjiazan.com",
     "email":"1710998763@qq.com",
     "startSite":"02/20/2025",
