--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
     "title":"王赞",
     "subTitle":"个人学习笔记",
-    "avatarUrl":"https://github.com/JiazanWang/jiazanwang.github.io/blob/main/static/avatorr.svg",
+    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
-    "faviconUrl":"https://github.com/JiazanWang/jiazanwang.github.io/blob/main/static/avatorr.svg",
+    "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "homeUrl":"http://code.wangjiazan.com",
     "email":"1710998763@qq.com",
     "startSite":"02/20/2025",
     "onePageListNum":10,
-    "singlePage":["about"],
+    "singlePage":["link","about","blog"],
     "iconList":{"blog":"<M1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25V1.75C0 .784.784 0 1.75 0ZM1.5 1.75v12.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V1.75a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25ZM11.75 3a.75.75 0 0 1 .75.75v7.5a.75.75 0 0 1-1.5 0v-7.5a.75.75 0 0 1 .75-.75Zm-8.25.75a.75.75 0 0 1 1.5 0v5.5a.75.75 0 0 1-1.5 0ZM8 3a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 8 3Z"},
     "exlink":{"blog":"https://blog.wangjiazan.com"},
     "commentLabelColor":"#006b75",
